<resources>
    <string name="app_name">Expenses</string>
    <string name="new_expense">New expense</string>
    <string name="description">Description</string>
    <string name="value">Value</string>
    <string name="maturity">Due date</string>
    <string name="no_repeat">No Repeat</string>
    <string name="repeat">Repeat</string>
    <string name="fixed">Fixed</string>
    <string name="installments">Installments</string>
    <string name="qtdInstallments">Number of installments</string>
    <string name="save">Save</string>
    <string name="provide_the_description_of_the_expense">Provide the description of the expense</string>
    <string name="provide_the_value_of_the_expense">Provide the value of the expense</string>
    <string name="required_field_description">Description is required</string>
    <string name="required_field_value">Expense value cannot be empty</string>
    <string name="rent">Rent</string>
    <string name="twelve">12</string>
    <string name="total_payable">Total</string>
    <string name="balance_to_pay">Balance to Pay</string>
    <string name="title_fragment_details">Details</string>
    <string name="title_my_expense">My Expenses</string>
    <string name="delete">Delete</string>
    <string name="paidout">Paid</string>
    <string name="ok">Ok</string>
    <string name="important">Important</string>
    <string name="new_coin_info">You have expenses registered in a different currency than the current currency of your country. Therefore, it is necessary to register all your expenses in the current currency of your country.</string>
    <string name="required_field_installments">Provide the number of installments</string>
    <string name="late">Late</string>
    <string name="alert">Alert</string>
    <string name="message_info_expense_existing">It is not possible to register this expense because there is already an expense with the same description and registered value.</string>
    <string name="edit">Edit</string>
    <string name="edit_bottom_sheet_description_info">Edit installment</string>
    <string name="expense_delete_infor_title">This expense has multiple installments, do you want to delete:</string>
    <string name="expense_delete_info_it">Only this one</string>
    <string name="expense_delete_info_all">All</string>
    <string name="alert_delet_info">Do you really want to delete?</string>
    <string name="settings">Settings</string>
    <string name="ordem_title">Sort</string>
    <string name="ordem_description">By description A - Z</string>
    <string name="ordem_date_desc">By descending date</string>
    <string name="ordem_date_cres">By ascending date</string>
    <string name="backup">Backup</string>
    <string name="backup_description">Create and restore backup</string>
    <string name="settings_pro_title">Advantages of PRO VERSION</string>
    <string name="vantagens_pro_1">No video ads.</string>
    <string name="vantagens_pro_2">No banner ads.</string>
    <string name="vantagens_pro_3">Expense backup.</string>
    <string name="vantagens_pro_4">Expense due date notification.</string>
    <string name="btn_pro">I want to join PRO VERSION</string>
    <string name="search">Search</string>
    <string name="colunas">Columns</string>
    <string name="value_expense">Expense value</string>
    <string name="maturity_date">04/14/2023</string>
    <string name="maturity_info">Due Date</string>
    <string name="nopaidout">Not paid</string>
    <string name="no_expense_share">There are no expenses to generate PDF for this month.</string>
    <string name="share_pdf">Share PDF</string>
    <string name="about">About</string>
    <string name="paidoutmarcar">Mark as paid</string>
    <string name="confirmar">Confirm</string>
    <string name="deleteinfo">Do you really want to delete this expense?</string>
    <string name="deletecategory">Do you really want to delete this category?</string>
    <string name="nodesfeita">This action cannot be undone.</string>
    <string name="paidoutinfo">This expense is paid.</string>
    <string name="paidoutinfo2">Unpaid expense.</string>
    <string name="paidoutmarcardesmarcar">Mark as unpaid</string>
    <string name="titlenotification">Expense due today</string>
    <string name="expense_due_today">Reminder: You have an expense due today. Don\'t forget to make the payment!</string>
    <string name="resumo">Summary</string>
    <string name="share">Share</string>
    <string name="roupas">Clothing</string>
    <string name="viagem">Travel</string>
    <string name="cartao">Credit Card</string>
    <string name="saude">Health</string>
    <string name="filme">Movies</string>
    <string name="outros">Others</string>
    <string name="comidabebida">Food and Beverage</string>
    <string name="transporte">Transportation</string>
    <string name="eletronicos">Electronics</string>
    <string name="educacao">Education</string>
    <string name="entretenimento">Entertainment</string>
    <string name="searchcategory">Search category</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="category">Categories</string>
    <string name="new_category">New category</string>
    <string name="name">Name</string>
    <string name="select_color">Select color</string>
    <string name="select_imagem">Select image</string>
    <string name="select_a_color">Select a color</string>
    <string name="select_a_icon">Select an icon</string>
    <string name="required">This field is required.</string>
    <string name="no_expense_month">You have no expenses this month!</string>
    <string name="exportar_backups">Export backup</string>
    <string name="backup_seguranca">Create backup</string>
    <string name="importar_backups">Import backup</string>
    <string name="restaurar_backup_seguranca">Restore backup</string>
    <string name="importado_backup_sucesso">Expenses have been successfully restored and are now saved in your application.</string>
    <string name="exportado_sucesso">The backup has been created and saved on your device successfully.</string>
    <string name="importado_backup_existente">The items from this backup are already saved on this device, so there is no need to import them again.</string>
    <string name="lista_backup_vazia">You don\'t have any expenses registered to create a backup.</string>
    <string name="alerta_backup">When creating a backup, the file is saved on your device in the folder of your choice. It is highly recommended that you upload this file to a cloud storage service to avoid data loss in case of any issues with your device.</string>
    <string name="permicaonotification">Allow sending expense due notifications to you?</string>
    <string name="abrirsettings">Open settings</string>
    <string name="cancel">Cancel</string>
    <string name="notitification_infor">Notification Permission</string>
    <string name="abrir_settings_notification">Open system notification settings</string>
    <string name="permitir">Allow</string>
    <string name="naopermitir">Don\'t Allow</string>
    <string name="expense_delete_info_it_en_next">This and future</string>
    <string name="version_pro_title">Select your plan</string>
    <string name="pro_month">Monthly Pro</string>
    <string name="value_month_pro">R$ 11.99\n per month</string>
    <string name="pro_semestral">Semi-annual Pro</string>
    <string name="value_semestral_pro">R$ 57.99\n 6 months</string>
    <string name="pro_vantagem">Advantages of being Pro:</string>
    <string name="nopropaganda">No advertisements.</string>
    <string name="assinar">Subscribe</string>
    <string name="economize">Save</string>
    <string name="confirma_assinatura">Your subscription has been confirmed! Please restart the app to enjoy the premium features. Thank you for choosing us!</string>
    <string name="parabens">Congratulations!</string>
    <string name="compra_em_andamento">Purchase in progress</string>
    <string name="processamento_assinatura">Thank you for purchasing our premium subscription! Your order is being processed. Soon, you will have full access to the premium features of our app.</string>
    <string name="cancelado_pelo_usuario">Canceled by the user.</string>
    <string name="filter">Filter</string>
    <string name="filter_categoria_titulo">Filter by category</string>
    <string name="filter_categoria_limpar">Clear filter</string>
    <string name="no_expense_month_filter">No expenses for the selected filter.</string>
    <string name="classifique">Rate us!</string>
    <string name="classifique_description">Rate us on the Play Store</string>
    <string name="compartilhe">Share</string>
    <string name="indigueamigos">Recommend to friends and family</string>
    <string name="message_compartilhar">I\'ve found a great Expense app! 📊💰 It\'s easy to use and helps me manage my finances efficiently. I highly recommend trying it out! You can download the app here: [https://play.google.com/store/apps/details?id=com.isaquesoft.despesas]. 💡📱 #ExpenseApp #FinancialManagement</string>
    <string name="suporte">Support</string>
    <string name="suportemessage">Ask questions, report issues, or give suggestions</string>
    <string name="suportecontato">If you have any issues, questions, or want to leave a suggestion for our application, please send us an email at isaquesoftware@gmail.com</string>
    <string name="settings_titulo_assinante">Make the Most of Your App Subscription!</string>
    <string name="categoria">Category</string>
    <string name="mes">Month:</string>
    <string name="pago">Paid out:</string>
    <string name="nopago">I do not pay:</string>
    <string name="amount">Amount:</string>
    <string name="share_excel">Share Excel</string>
    <string name="share_excel_pro">Share Excel.</string>
    <string name="editar_categoria">Edit category</string>
</resources>