<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item app:showAsAction="always"
        android:icon="@drawable/baseline_filter_list_24"
        android:id="@+id/filter"
        android:title="@string/filter"
        />
    <item
        android:id="@+id/menu_main"
        android:title="Menu principal"
        android:icon="@drawable/more_vert"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/share_item"
                android:title="@string/share_pdf"
                />

            <item
                android:id="@+id/share_excel"
                android:title="@string/share_excel"
                tools:ignore="HardcodedText" />
        </menu>
    </item>
</menu>