<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/filter_title_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/ordem_title"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <View
        android:id="@+id/filter_bottom_sheet_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        />

    <RadioGroup
        android:id="@+id/filter_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/filter_title_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">

        <RadioButton
            android:id="@+id/ordenm_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordem_description" />

        <RadioButton
            android:id="@+id/ordenm_date_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordem_date_desc" />

        <RadioButton
            android:id="@+id/ordenm_date_cres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordem_date_cres" />
    </RadioGroup>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/filter_title_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/filter_radio_group"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/filter_categoria_titulo"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/filter_btn_limpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/filter_radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/filter_categoria_limpar"
        android:layout_margin="20dp"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filter_category_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_title_categoria"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_category"
        android:layout_marginBottom="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>