<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/alert_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/new_category"
        android:textColor="@color/grey_value"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/alert_category_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/alert_category_title" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/alert_category_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="40dp"
        android:maxLength="35"
        android:hint="@string/name"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alert_category_title" />

    <View
        android:id="@+id/alert_category_view_color"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="#44852C"
        app:layout_constraintStart_toStartOf="@id/alert_category_button_color"
        app:layout_constraintEnd_toEndOf="@id/alert_category_button_color"
        app:layout_constraintTop_toBottomOf="@id/alert_category_edit_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/alert_category_button_color"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/button_save"
        android:backgroundTint="#EEFDFF"
        app:layout_constraintEnd_toStartOf="@id/alert_category_button_icon"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="10dp"
        android:text="@string/select_color"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@id/alert_category_save_button"
        app:layout_constraintTop_toBottomOf="@id/alert_category_view_color" />

    <View
        android:id="@+id/alert_category_view_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/cardn"
        android:backgroundTint="@color/cinza_forte"
        app:layout_constraintEnd_toEndOf="@id/alert_category_button_icon"
        app:layout_constraintStart_toStartOf="@id/alert_category_button_icon"
        app:layout_constraintTop_toBottomOf="@id/alert_category_edit_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/alert_category_button_icon"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/button_save"
        android:backgroundTint="#EEFDFF"
        android:layout_marginTop="10dp"
        android:layout_marginStart="4dp"
        android:text="@string/select_imagem"
        app:layout_constraintStart_toEndOf="@id/alert_category_button_color"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@id/alert_category_save_button"
        app:layout_constraintTop_toBottomOf="@id/alert_category_view_icon" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/alert_category_save_button"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_save"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alert_category_button_color" />
</androidx.constraintlayout.widget.ConstraintLayout>