<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/edit_expense_bottom_sheet_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_expense_bottom_sheet_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_bottom_sheet_description_info"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/blue_700"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_expense_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_expense_bottom_sheet_description" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_expense_input_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="30dp"
        android:inputType="textCapSentences"
        android:maxLength="120"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_expense_description" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_expense_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/value"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_expense_input_description" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_expense_input_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="30dp"
        android:digits="0123456789"
        android:maxLength="19"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_expense_value" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_expense_maturity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/maturity"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_expense_input_value" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_expense_input_maturity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="30dp"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_expense_maturity" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_expense_save"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_save"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_expense_input_maturity"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>