<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/dialog_permission_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:src="@drawable/baseline_notifications_none_24"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialog_permission_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/permicaonotification"
        app:layout_constraintTop_toBottomOf="@id/dialog_permission_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_permission_positive"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@drawable/button_save"
        android:text="@string/permitir"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/dialog_permission_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_permission_negative"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@drawable/button_save"
        android:text="@string/naopermitir"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/dialog_permission_positive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>